Refactor index.html for dark mode and search features
Refactor HTML structure and styles for better organization, including dark mode support and improved search functionality.

--- a/index.html
+++ b/index.html
@@ -1,162 +1,123 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>Dashboard Phản Hồi Chấm Công – WAREHOUSE RYOBI</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Font tiếng Việt chuẩn -->
-<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+<!-- Font tiếng Việt -->
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;600;800&display=swap" rel="stylesheet">
 
 <!-- ChartJS -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 
 <style>
-    /* ======= GLOBAL ======= */
-    body {
-        font-family: 'Be Vietnam Pro', sans-serif;
-        margin: 20px;
-        background: #f5f7fa;
-        transition: background 0.4s, color 0.4s;
+/* ===================== DARK MODE AUTO ===================== */
+:root {
+    --bg: #f5f7fa;
+    --text: #111;
+    --box: #fff;
+    --box-border: #ddd;
+}
+@media (prefers-color-scheme: dark) {
+    :root {
+        --bg: #121212;
+        --text: #eee;
+        --box: #1e1e1e;
+        --box-border: #333;
     }
+}
 
-    body.dark {
-        background: #121212;
-        color: #eaeaea;
-    }
+/* ===================== GLOBAL ===================== */
+body {
+    background: var(--bg);
+    color: var(--text);
+    font-family: "Be Vietnam Pro", sans-serif;
+    margin: 20px;
+    transition: background 0.3s, color 0.3s;
+}
 
-    /* ======= TITLE NEON POSTER ======= */
-    h1 {
-        font-size: 42px;
-        font-weight: 900;
-        text-align: center;
-        margin-bottom: 15px;
-        background: linear-gradient(90deg, #4facfe, #00f2fe);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+/* ===================== TITLE ===================== */
+h1 {
+    text-align: center;
+    font-size: 42px;
+    font-weight: 800;
+    margin-bottom: 10px;
+    background: linear-gradient(90deg, #4facfe, #00f2fe);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0 0 12px rgba(0,255,255,0.25);
+}
 
-        /* Hiệu ứng Glow */
-        text-shadow:
-            0 0 8px rgba(0, 255, 255, 0.5),
-            0 0 16px rgba(0, 128, 255, 0.4),
-            0 0 24px rgba(0, 128, 255, 0.3);
-    }
+h2 { margin-top: 25px; }
 
-    h2 {
-        margin-top: 25px;
-        font-size: 26px;
-    }
+/* ===================== SEARCH ===================== */
+.search-bar input {
+    padding: 8px;
+    width: 180px;
+    margin-right: 5px;
+    border-radius: 6px;
+    border: 1px solid var(--box-border);
+    background: var(--box);
+    color: var(--text);
+}
 
-    /* ======= SEARCH BAR ======= */
-    .search-bar input {
-        padding: 8px;
-        width: 180px;
-        margin-right: 5px;
-        border-radius: 6px;
-        border: 1px solid #bbb;
-    }
-    .search-bar button {
-        padding: 8px 14px;
-        border-radius: 6px;
-        cursor: pointer;
-        border: none;
-        background: linear-gradient(90deg, #4facfe, #00f2fe);
-        color: white;
-        font-weight: 700;
-    }
+/* ===================== TABLE ===================== */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+    background: var(--box);
+    border-radius: 12px;
+    overflow: hidden;
+}
 
-    /* ======= DARK MODE BUTTON ======= */
-    .toggle-dark {
-        float: right;
-        margin-top: -60px;
-        margin-right: 10px;
-        cursor: pointer;
-        background: #222;
-        padding: 10px 14px;
-        color: white;
-        border-radius: 8px;
-    }
+th, td {
+    padding: 10px;
+    border-bottom: 1px solid var(--box-border);
+}
 
-    /* ======= TABLE ======= */
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 20px;
-        background: white;
-        border-radius: 12px;
-        overflow: hidden;
-        transition: background 0.4s, color 0.4s;
-    }
-    body.dark table {
-        background: #1e1e1e;
-        color: white;
-    }
+th {
+    background: rgba(0,0,0,0.05);
+    cursor: pointer;
+}
 
-    th, td {
-        padding: 10px;
-        border-bottom: 1px solid #ddd;
-        font-size: 14px;
-    }
-    th {
-        background: #eef1f5;
-    }
-    body.dark th {
-        background: #2c2c2c;
-        color: white;
-    }
+/* Badge */
+.badge {
+    padding: 4px 12px;
+    border-radius: 16px;
+    font-size: 12px;
+    color: #fff;
+}
+.confirm-none { background: #ff6b6b; }
+.confirm-done { background: #2ecc71; }
 
-    .badge {
-        padding: 4px 12px;
-        border-radius: 16px;
-        font-size: 12px;
-        color: #fff;
-    }
-    .confirm-none { background: #ff6b6b; }
-    .confirm-done { background: #2ecc71; }
+/* ===================== CHART BOXES ===================== */
+.chart-box {
+    background: var(--box);
+    padding: 15px;
+    border-radius: 12px;
+    margin-top: 20px;
+    border: 1px solid var(--box-border);
+}
 
-    /* ======= FOOTER CHART LAYOUT ======= */
-    .footer-charts {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 20px;
-        margin-top: 30px;
-    }
+.footer-layout {
+    display: grid;
+    gap: 20px;
+}
 
-    .row-2 {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        gap: 20px;
-    }
+.footer-row {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+}
 
-    .chart-box {
-        background: white;
-        border-radius: 12px;
-        padding: 15px;
-        box-shadow: 0 3px 8px rgba(0,0,0,0.08);
-        transition: background 0.4s, color 0.4s;
-    }
-    body.dark .chart-box {
-        background: #1e1e1e;
-        color: white;
-    }
+.full-row { grid-column: 1 / -1; }
 
-    /* ======= PAGINATION ======= */
-    .pagination {
-        margin-top: 15px;
-        text-align: center;
-    }
-    .pagination button {
-        padding: 6px 12px;
-        margin: 2px;
-        border: none;
-        background: #4facfe;
-        color: white;
-        border-radius: 6px;
-        cursor: pointer;
-    }
+/* ===================== AUDIO ===================== */
+audio { display: none; }
 
-    /* ======= AUDIO ======= */
-    audio { display: none; }
 </style>
 </head>
 
@@ -164,16 +125,12 @@
 
 <h1>Dashboard Phản Hồi Chấm Công – WAREHOUSE RYOBI</h1>
 
-<div class="toggle-dark" onclick="toggleDark()">🌙 Dark Mode</div>
-
-<p>📌 Dữ liệu cập nhật tự động.</p>
+<p>📌 Dữ liệu được cập nhật tự động ❤️🫶❤️</p>
 
 <!-- SEARCH -->
 <div class="search-bar">
-    <input id="searchMSNV" placeholder="Tìm MSNV…">
-    <input id="searchName" placeholder="Tìm họ tên…">
-    <button onclick="applySearch()">Lọc</button>
-    <button onclick="resetFilter()">Xóa</button>
+    <input id="searchMSNV" placeholder="Tìm theo MSNV…">
+    <input id="searchName" placeholder="Tìm theo họ tên…">
 </div>
 
 <h2>Danh sách chi tiết</h2>
@@ -193,14 +150,12 @@
     <tbody></tbody>
 </table>
 
-<div class="pagination" id="pagination"></div>
-
 <!-- FOOTER CHARTS -->
 <h2>Biểu đồ phụ</h2>
 
-<div class="footer-charts">
+<div class="footer-layout">
 
-    <div class="row-2">
+    <div class="footer-row">
         <div class="chart-box">
             <h3>Theo BU</h3>
             <canvas id="chartBU"></canvas>
@@ -212,12 +167,12 @@
         </div>
     </div>
 
-    <div class="chart-box">
+    <div class="chart-box full-row">
         <h3>Top phản hồi</h3>
         <canvas id="chartTop"></canvas>
     </div>
 
-    <div class="chart-box">
+    <div class="chart-box full-row">
         <h3>Theo ngày chỉnh</h3>
         <canvas id="chartNgay"></canvas>
     </div>
@@ -232,22 +187,64 @@
 <script>
 const jsonUrl = "https://hoailuan0311-code.github.io/ChamCongDashboard/data.json";
 let fullData = [];
-let tablePage = 1;
-const pageSize = 15;
 
 /* ================= LOAD DATA ================= */
-async function loadData() {
+async function loadData(){
     let res = await fetch(jsonUrl + "?cache=" + Date.now());
     fullData = await res.json();
     renderAll(fullData);
 }
 loadData();
 
-/* ================= DATE FORMAT ================= */
+/* ================= FORMAT DATE ================= */
 function excelDate(v){
     if (!v) return "";
     const d = new Date((v - 25569) * 86400 * 1000);
     return isNaN(d) ? v : d.toLocaleDateString("en-GB",{day:"2-digit",month:"short",year:"numeric"});
+}
+
+/* ================= SEARCH REALTIME ================= */
+document.getElementById("searchMSNV").addEventListener("input", applySearch);
+document.getElementById("searchName").addEventListener("input", applySearch);
+
+function applySearch(){
+    let ms = searchMSNV.value.toLowerCase();
+    let nm = searchName.value.toLowerCase();
+
+    let f = fullData.filter(r =>
+        (!ms || (r.MSNV+"").includes(ms)) &&
+        (!nm || (r.FullName+"").toLowerCase().includes(nm))
+    );
+
+    renderAll(f);
+}
+
+/* ================= SORT ================= */
+function sortBy(col){
+    fullData.sort((a,b)=> (a[col] > b[col] ? 1 : -1));
+    renderAll(fullData);
+}
+
+/* ================= RENDER TABLE ================= */
+function renderTable(data){
+    let tbody = document.querySelector("#dataTable tbody");
+    tbody.innerHTML = "";
+
+    data.forEach(r=>{
+        tbody.innerHTML += `
+        <tr>
+            <td>${r.MSNV}</td>
+            <td>${r.FullName}</td>
+            <td>${excelDate(r.NgayDieuChinh)}</td>
+            <td>${r.NoiDung || ""}</td>
+            <td><span class="badge ${r.ConfirmAdmin ? "confirm-done":"confirm-none"}">
+                ${r.ConfirmAdmin || "Chưa phản hồi"}
+            </span></td>
+            <td>${r.BU || ""}</td>
+            <td>${r.Team || ""}</td>
+        </tr>
+        `;
+    });
 }
 
 /* ================= RENDER ALL ================= */
@@ -259,84 +256,22 @@ function renderAll(data){
     renderNgay(data);
 }
 
-/* ================= TABLE ================= */
-function renderTable(data){
-    let tbody = document.querySelector("#dataTable tbody");
-    tbody.innerHTML = "";
+/* ================= CHART FUNCTIONS ================= */
 
-    let start = (tablePage - 1) * pageSize;
-    let pageData = data.slice(start, start + pageSize);
+Chart.register(ChartDataLabels);
 
-    pageData.forEach(r => {
-        tbody.innerHTML += `
-        <tr>
-            <td>${r.MSNV || ""}</td>
-            <td>${r.FullName || ""}</td>
-            <td>${excelDate(r.NgayDieuChinh)}</td>
-            <td>${r.NoiDung || ""}</td>
-            <td><span class="badge ${r.ConfirmAdmin ? "confirm-done" : "confirm-none"}">
-                ${r.ConfirmAdmin || "Chưa phản hồi"}
-            </span></td>
-            <td>${r.BU}</td>
-            <td>${r.Team}</td>
-        </tr>`;
-    });
-
-    renderPagination(data.length);
-}
-
-/* ================= PAGINATION ================= */
-function renderPagination(total){
-    let pages = Math.ceil(total / pageSize);
-    let div = document.getElementById("pagination");
-    div.innerHTML = "";
-
-    for (let i = 1; i <= pages; i++){
-        div.innerHTML += `<button onclick="goPage(${i})">${i}</button>`;
-    }
-}
-
-function goPage(p){
-    tablePage = p;
-    renderAll(fullData);
-}
-
-/* ================= SEARCH ================= */
-function applySearch(){
-    let ms = searchMSNV.value.toLowerCase();
-    let nm = searchName.value.toLowerCase();
-
-    let f = fullData.filter(r =>
-        (!ms || (r.MSNV+"").toLowerCase().includes(ms)) &&
-        (!nm || (r.FullName+"").toLowerCase().includes(nm))
-    );
-    renderAll(f);
-}
-
-function resetFilter(){
-    searchMSNV.value = "";
-    searchName.value = "";
-    renderAll(fullData);
-}
-
-/* ================= SORTING ================= */
-function sortBy(col){
-    fullData.sort((a,b)=> (a[col] > b[col] ? 1 : -1));
-    renderAll(fullData);
-}
-
-/* ================= CHARTS ================= */
 function renderBU(data){
     const c = {};
     data.forEach(r => c[r.BU] = (c[r.BU] || 0) + 1);
 
-    new Chart(chartBU,{
-        type:"pie",
-        data:{
-            labels:Object.keys(c),
-            datasets:[{ data:Object.values(c), backgroundColor:["#ff6384","#36a2eb"] }]
-        },
-        options:{ animation:{ duration:1200, easing:"easeOutBounce" } }
+    new Chart(chartBU, {
+        type: "pie",
+        data: { labels: Object.keys(c), datasets: [{ data:Object.values(c), backgroundColor:["#ff6384","#36a2eb"] }]},
+        plugins: [ChartDataLabels],
+        options:{
+            animation:{ duration:1200, easing:"easeOutBounce" },
+            plugins:{ datalabels:{ color:"#fff", font:{weight:"bold"} } }
+        }
     });
 }
 
@@ -350,32 +285,37 @@ function renderTeam(data){
             labels:Object.keys(c),
             datasets:[{ data:Object.values(c), backgroundColor:"#ffa64d" }]
         },
+        plugins:[ChartDataLabels],
         options:{
-            animation:{ duration:1500, easing:"easeOutElastic" }
+            animation:{ duration:1200, easing:"easeOutElastic" },
+            plugins:{ datalabels:{ anchor:"end", align:"top", color:varText, font:{weight:"bold"} } }
         }
     });
 }
 
 function renderTop(data){
     const c = {};
-    data.forEach(r=> c[r.FullName] = (c[r.FullName]||0)+1);
-    let s = Object.entries(c).sort((a,b)=>b[1]-a[1]).slice(0,10);
+    data.forEach(r => c[r.FullName] = (c[r.FullName]||0)+1);
+
+    let sorted = Object.entries(c).sort((a,b)=>b[1]-a[1]).slice(0,10);
 
     new Chart(chartTop,{
         type:"bar",
         data:{
-            labels:s.map(x=>x[0]),
-            datasets:[{ data:s.map(x=>x[1]), backgroundColor:"#00c9ff" }]
+            labels:sorted.map(x=>x[0]),
+            datasets:[{ data:sorted.map(x=>x[1]), backgroundColor:"#00c9ff" }]
         },
+        plugins:[ChartDataLabels],
         options:{
-            animation:{ duration:1000, easing:"easeOutQuad" }
+            animation:{ duration:1400, easing:"easeOutQuad" },
+            plugins:{ datalabels:{ anchor:"end", align:"top", color:varText, font:{weight:"bold"} } }
         }
     });
 }
 
 function renderNgay(data){
     const c = {};
-    data.forEach(r=>{
+    data.forEach(r => {
         let d = excelDate(r.NgayDieuChinh);
         c[d] = (c[d]||0)+1;
     });
@@ -386,20 +326,18 @@ function renderNgay(data){
             labels:Object.keys(c),
             datasets:[{ data:Object.values(c), backgroundColor:"#9b59b6" }]
         },
-        options:{ animation:{ duration:1200, easing:"easeOutBounce" } }
+        plugins:[ChartDataLabels],
+        options:{
+            animation:{ duration:1500, easing:"easeOutBounce" },
+            plugins:{ datalabels:{ anchor:"end", align:"top", color:varText, font:{weight:"bold"} } }
+        }
     });
 }
 
-/* ================= DARK MODE ================= */
-function toggleDark(){
-    document.body.classList.toggle("dark");
-}
+/* ================= BACKGROUND MUSIC ================= */
+document.addEventListener("click", ()=> bgMusic.play(), {once:true});
+document.addEventListener("touchstart", ()=> bgMusic.play(), {once:true});
 
-/* ================= AUTO MUSIC ================= */
-const music = document.getElementById("bgMusic");
-document.addEventListener("touchstart", ()=>music.play(), {once:true});
-document.addEventListener("click", ()=>music.play(), {once:true});
-music.play().catch(()=>{});
 </script>
 
 </body>
