Update title and paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
-<title>Dashboard Phản Hồi Chấm Công – WAREHOUSE RYOBI</title>
+<title>📅 Dashboard Phản Hồi Chấm Công – WAREHOUSE RYOBI</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Font tiếng Việt -->
@@ -125,7 +125,7 @@ audio { display: none; }
 
 <h1>Dashboard Phản Hồi Chấm Công – WAREHOUSE RYOBI</h1>
 
-<p>📌 Dữ liệu được cập nhật tự động ❤️🫶❤️</p>
+<p>🕓 Dữ liệu được cập nhật tự động ❤️🫶❤️</p>
 
 <!-- SEARCH -->
 <div class="search-bar">
